# digital-twin

./: .gitignore  CMakeLists.txt  README.md  command_list.txt  package.xml
blend/: aquatic_robot_v1.blend  argo.blend  p900.blend  robot.blend  submarin_robot.blend
config/: TAM.yaml  thruster_manager.yaml
description/robots/: argo_default.xacro
description/urdf/: argo.gazebo.xacro  argo_actuators.xacro  argo_base.xacro  argo_sensors.xacro  argo_snippets.xacro  robot.xacro
gazebo/: default.gazebo
launch/: bug2.launch  display.launch  gazebo.launch  ocean_waves.launch  rviz.launch  start_demo_pid_controller.launch  start_pid_controller.launch  thruster_manager.launch  upload_argo.launch
meshes/: argo.dae  cliff_rocks.dae  duck.dae  p900.dae  propeller.dae  submarin_robot.dae
rviz/: argo_control.rviz  default.rviz  laser.rviz
src/: autonomous_driving.py  baisc_autonomous_driving.py  basic_autonomous_driving.py  basic_motion.py  bug0.py  bug2.py  follow_wall.py  go_to_point.py  turtlesim_cleaner.py
urdf/: aquatic_robot_v1.xacro  first.xacro  robot.xacro  second.xacro
worlds/: ocean_waves.world
