<?xml version="1.0"?>
<package format="2">
  <name>digital-twin</name>
  <version>0.0.0</version>
  <description>The digital-twin package</description>
  <maintainer email="emanueleizzo94@gmail.com"></maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>uuv_descriptions</depend>
  <depend>uuv_sensor_ros_plugins</depend>
  <depend>uuv_gazebo_ros_plugins</depend>
  <depend>uuv_assistants</depend>
  <depend>uuv_trajectory_control</depend>
  <depend>uuv_thruster_manager</depend>
  <depend>uuv_gazebo_worlds</depend>
  <depend>uuv_world_ros_plugins</depend>
  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_model_path="${prefix}/meshes"/>
  </export>
</package>